<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.cryptox.FileDetailsActivity" >

    <item
        android:id="@+id/original_lst"
        android:orderInCategory="99"
        android:showAsAction="never"
        android:title="@string/original"/>
    <item
        android:id="@+id/sortByNameAscending"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/sort_name_asc"/>
    <item
        android:id="@+id/sortByNameDescending"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/sort_name_dsc"/>
    <item
        android:id="@+id/sortBySizeAscending"
        android:orderInCategory="102"
        android:showAsAction="never"
        android:title="@string/sort_size_asc"/>
    <item
        android:id="@+id/sortBySizeDescending"
        android:orderInCategory="103"
        android:showAsAction="never"
        android:title="@string/sort_size_dsc"/>
    <item
        android:id="@+id/sortByDateModifiedAscending"
        android:orderInCategory="104"
        android:showAsAction="never"
        android:title="@string/sort_date_asc"/>
    <item
        android:id="@+id/sortByDateModifiedDescending"
        android:orderInCategory="105"
        android:showAsAction="never"
        android:title="@string/sort_date_dsc"/>
    <item
        android:id="@+id/logout"
        android:orderInCategory="106"
        android:showAsAction="never"
        android:title="@string/logout"/>

</menu>